ETAPA_2: Backend esperar o bancos de dados estar pronto
Apos testes, foi constatado que na primeira vez que os containers sao iniciados
acontece um erro no backend devido a problemas de conexao com o banco de dados.
O que acontece é que, mesmo com o depends on, o backend inicia antes do banco de dados
estar pronto para conexao.
A solucao foi fazer um shell script que fica aguardando o banco de dados esta pronto
pra receber conexao.
A solucao baseada em: https://stackoverflow.com/a/50108745

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
 
   library_back:
     build: ./library_back/
+    restart: always
     environment:
       POSTGRES_PASSWORD: gces
       POSTGRES_USER: gces
@@ -28,6 +29,7 @@ services:
 
   library_front:
     build: ./library_front/
+    restart: always
     volumes:
       - ./library_front:/home/library_front
       - /home/library_front/node_modules
