ETAPA_4: Nginx static frontend
Referencias
https://www.digitalocean.com/community/tutorials/how-to-deploy-a-react-application-with-nginx-on-ubuntu-20-04
https://www.nginx.com/resources/wiki/start/topics/examples/full/
https://hub.docker.com/_/nginx
https://blog.devgenius.io/using-nginx-to-serve-react-application-static-vs-proxy-69b85f368e6c

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,7 @@ services:
 
   library_front:
     build: ./library_front/
+    image: gces-trabalho-individual-front
     restart: always
     volumes:
       - ./library_front:/home/library_front
@@ -37,3 +38,11 @@ services:
       - 3000:3000
     entrypoint:
       npm start
+
+  library_nginx:
+    build: ./nginx/
+    restart: always
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+    ports:
+      - 8080:8080
