--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,10 @@ services:
       POSTGRES_PASSWORD: gces
       POSTGRES_USER: gces
       POSTGRES_DB: library_db
+    networks:
+      gces-trabalho-individual:
+        aliases:
+          - library_db
 
   library_back:
     build: ./library_back/
@@ -26,6 +30,10 @@ services:
       - library_db
     entrypoint: 
       ./start.sh
+    networks:
+      gces-trabalho-individual:
+        aliases:
+          - library_back
 
   library_front:
     build: ./library_front/
@@ -38,6 +46,12 @@ services:
       - 3000:3000
     entrypoint:
       npm start
+    depends_on:
+      - library_back
+    networks:
+      gces-trabalho-individual:
+        aliases:
+          - library_front
 
   library_nginx:
     build: ./nginx/
@@ -46,3 +60,12 @@ services:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
     ports:
       - 8080:8080
+    depends_on:
+      - library_front
+    networks:
+      gces-trabalho-individual:
+        aliases:
+          - library_nginx
+
+networks:
+  gces-trabalho-individual:
