--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -30,13 +30,21 @@ http {
 
     include /etc/nginx/conf.d/*.conf;
 
+    upstream library_front_server {
+        server library_front:3000;
+    }
+
     server {
         listen 8080;
         root /var/www/html;
-        index index.html;
 
         location / {
-            try_files $uri $uri/ =404;
+            try_files $uri $uri/ @frontend;
         }
+
+        location @frontend {
+            proxy_pass http://library_front_server;
+        }
+
     }
 }
