ETAPA_4: Nginx proxy backend

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -34,6 +34,10 @@ http {
         server library_front:3000;
     }
 
+    upstream library_back_server {
+        server library_back:8000;
+    }
+
     server {
         listen 8080;
         root /var/www/html;
@@ -46,5 +50,8 @@ http {
             proxy_pass http://library_front_server;
         }
 
+        location /api {
+            proxy_pass http://library_back_server;
+        }
     }
 }
