--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,10 +9,13 @@ on:
       - main
 
 jobs:
-  build:
+  ci:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
 
       - name: Build Images
         run: docker-compose build
+
+      - name: Test backend
+        run: docker-compose run --rm --entrypoint ./test.sh library_back
