ETAPA_6: CI teste frontend
O teste do frontend estava falhando porque ele esperava uma palavra que nao existia mais, entao isso foi resolvido

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,3 +19,6 @@ jobs:
 
       - name: Test backend
         run: docker-compose run --rm --entrypoint "bash test.sh" library_back
+
+      - name: Test frontend
+        run: docker-compose run --rm --no-deps --entrypoint "npm run test --ci" library_front 
