--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,4 +21,4 @@ jobs:
         run: docker-compose run --rm --entrypoint "bash test.sh" library_back
 
       - name: Test frontend
-        run: docker-compose run --rm --no-deps --entrypoint "npm run test --ci" library_front 
+        run: docker-compose run --rm --no-deps --entrypoint "npm run test --watchAll=false" library_front 
