ETAPA_6: CI lint frontend
Como nao tinha o script, foi adicionado o npm run lint

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,3 +22,6 @@ jobs:
 
       - name: Test frontend
         run: docker-compose run --rm --no-deps --entrypoint "npm run test --watchAll=false" library_front 
+
+      - name: Lint frontend
+        run: docker-compose run --rm --no-deps --entrypoint "npm run lint" library_front
