ETAPA_6: CI lint backend

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,10 @@ jobs:
         run: docker-compose run --rm --entrypoint "bash test.sh" library_back
 
       - name: Test frontend
-        run: docker-compose run --rm --no-deps --entrypoint "npm run test --ci=true --watchAll=false" library_front 
+        run: docker-compose run --rm --no-deps -e CI=true --entrypoint "npm run test" library_front 
 
       - name: Lint frontend
         run: docker-compose run --rm --no-deps --entrypoint "npm run lint" library_front
+
+      - name: Lint backend
+        run: docker-compose run --rm --entrypoint "black . --check -v" library_back
