--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,16 +15,16 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Build Images
-        run: docker-compose build
+        run: make build
 
       - name: Test backend
-        run: docker-compose run --rm --entrypoint "bash test.sh" library_back
+        run: make test-back
 
       - name: Test frontend
-        run: docker-compose run --rm --no-deps -e CI=true --entrypoint "npm run test" library_front 
+        run: make test-front
 
       - name: Lint frontend
-        run: docker-compose run --rm --no-deps --entrypoint "npm run lint" library_front
+        run: make lint-front
 
       - name: Lint backend
-        run: docker-compose run --rm --entrypoint "black . --check -v" library_back
+        run: make lint-back
